# gp-ember

./: .gitignore  CMakeLists.txt  README.md
cmake-modules/: Findepoxy.cmake
include/: linmath.h
src/: geometry.cpp  geometry.h  main.cpp
